--- a/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
@@ -1,11 +1,13 @@
-﻿<Window x:Class="SWD_GUI_Assignment.MainWindow"
+﻿<Window x:Class="SWD_GUI_Assignment.Views.EditDebtorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SWD_GUI_Assignment"
+        xmlns:local="clr-namespace:SWD_GUI_Assignment.Views"
+        xmlns:se="clr-namespace:SWD_GUI_Assignment.Services"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding Path=WindowTitle}" Height="450" Width="800"
+        se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False">
     <Grid>
         
     </Grid>
