--- a/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
@@ -6,9 +6,33 @@
         xmlns:local="clr-namespace:SWD_GUI_Assignment.Views"
         xmlns:se="clr-namespace:SWD_GUI_Assignment.Services"
         mc:Ignorable="d"
-        Title="{Binding Path=WindowTitle}" Height="450" Width="800"
+        Title="{Binding Path=WindowTitle}" Height="450" Width="600"
         se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Margin="10,10,10,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <ListView Grid.Row="0" MinWidth="400" MinHeight="300"/>
+            <Button Grid.Row="1" Content="Close"/>
+        </Grid>
+        <Grid Grid.Column="1" Margin="10,10,10,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBox Grid.Column="0" Grid.Row="0" MinWidth="100"/>
+            <Label Grid.Column="1" Grid.Row="0" Content="DKK"></Label>
+            <Button Grid.Column="0" Grid.Row="1" Content="Add value"/>
+        </Grid>
     </Grid>
 </Window>
