--- a/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
@@ -18,8 +18,8 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <ListView Grid.Row="0" MinWidth="400" MinHeight="300" ItemsSource="{Binding Path=ActiveDebtor.Transactions}" DisplayMemberPath="DateAndAmount" IsSynchronizedWithCurrentItem="True"/>
-            <Button Grid.Row="1" Content="Close"/>
+            <DataGrid CanUserAddRows="False" IsSynchronizedWithCurrentItem="True" MinHeight="200" MinWidth="400" CanUserDeleteRows="False" IsReadOnly="True" x:Name="Debtor" ItemsSource="{Binding Path=ActiveDebtor.Transactions}" SelectedItem="{Binding Path=CurrentDebtor}" AutoGenerateColumns="True" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
+                <Button Grid.Row="1" Content="Close"/>
         </Grid>
         <Grid Grid.Column="1" Margin="10,10,10,10">
             <Grid.RowDefinitions>
