--- a/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
@@ -19,7 +19,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <DataGrid CanUserAddRows="False" IsSynchronizedWithCurrentItem="True" MinHeight="200" MinWidth="400" CanUserDeleteRows="False" IsReadOnly="True" x:Name="Debtor" ItemsSource="{Binding Path=ActiveDebtor.Transactions}" SelectedItem="{Binding Path=CurrentDebtor}" AutoGenerateColumns="True" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
-                <Button Grid.Row="1" Content="Close"/>
+                <Button IsCancel="true" Grid.Row="1" Content="Close"/>
         </Grid>
         <Grid Grid.Column="1" Margin="10,10,10,10">
             <Grid.RowDefinitions>
@@ -30,9 +30,9 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" Grid.Row="0" MinWidth="100"/>
+            <TextBox Name="AddValue" Grid.Column="0" Grid.Row="0" MinWidth="100" Text="{Binding Path = NewTransaction, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Grid.Column="1" Grid.Row="0" Content="DKK"></Label>
-            <Button Grid.Column="0" Grid.Row="1" Content="Add value"/>
+            <Button IsDefault="true" Grid.Column="0" Grid.Row="1" Content="Add transaction" Command="{Binding Path=AddValueCommand}"/>
         </Grid>
     </Grid>
 </Window>
