--- a/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:se="clr-namespace:SWD_GUI_Assignment.Services"
         mc:Ignorable="d"
         Title="{Binding Path=WindowTitle}" Height="180" Width="300"
-        se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False" FocusManager.FocusedElement="{Binding ElementName=Name}">
+        se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False" FocusManager.FocusedElement="{Binding ElementName=TextBoxName}" WindowStartupLocation="CenterOwner">
     <Grid Margin="5">
        <Grid.RowDefinitions>
            <RowDefinition Height="Auto"></RowDefinition>
@@ -20,10 +20,10 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Label Content="Name" Grid.Row="0" Grid.Column="0"></Label>
-        <TextBox Name="Name" Text="{Binding Path=Debtor.Name}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3"></TextBox>
-        <Label Content="Amount" Grid.Row="2" Grid.Column="0"></Label>
-        <TextBox Name="Amount" Text="{Binding Path=Amount, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelName" Content="Name" Grid.Row="0" Grid.Column="0"></Label>
+        <TextBox Name="TextBoxName" Text="{Binding Path=Debtor.Name}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelAmount" Content="Amount" Grid.Row="2" Grid.Column="0"></Label>
+        <TextBox Name="TextBoxAmount" Text="{Binding Path=Amount, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
         <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="0" Margin="0 10 0 0">
             <Button IsDefault="True" Content="OK" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=SaveCommand}" Margin="0 0 30 0"/>
             <Button IsCancel="True" Content="Cancel" HorizontalAlignment="Left" MinWidth="75"/>
