--- a/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
@@ -6,22 +6,22 @@
         xmlns:local="clr-namespace:SWD_GUI_Assignment.Views"
         xmlns:se="clr-namespace:SWD_GUI_Assignment.Services"
         mc:Ignorable="d"
-        Title="{Binding Path=WindowTitle}" Height="450" Width="600"
-        se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False">
+        Title="{Binding Path=WindowTitle}" Height="300" Width="580"
+        se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False" FocusManager.FocusedElement="{Binding ElementName=AddValue}" WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Margin="10,10,10,10">
+        <Grid Grid.Column="0" Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <DataGrid CanUserAddRows="False" IsSynchronizedWithCurrentItem="True" MinHeight="200" MinWidth="400" CanUserDeleteRows="False" IsReadOnly="True" x:Name="Debtor" ItemsSource="{Binding Path=ActiveDebtor.Transactions}" SelectedItem="{Binding Path=CurrentDebtor}" AutoGenerateColumns="True" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
-                <Button IsCancel="true" Grid.Row="1" Content="Close"/>
+            <Button IsCancel="true" Grid.Row="1" Content="Cancel" Padding="5 3" Margin="0 5 0 0"/>
         </Grid>
-        <Grid Grid.Column="1" Margin="10,10,10,10">
+        <Grid Grid.Column="1" Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -31,10 +31,10 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBox Name="AddValue" Grid.Column="0" Grid.Row="0" MinWidth="100" Text="{Binding Path = NewTransaction, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Name="AddValue" Grid.Column="0" Grid.Row="0" MinWidth="100" VerticalContentAlignment="Center" Text="{Binding Path=NewTransaction, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Grid.Column="1" Grid.Row="0" Content="DKK"></Label>
-            <Button IsDefault="true" Grid.Column="0" Grid.Row="1" Content="Add transaction" Command="{Binding Path=AddValueCommand}"/>
-            <Button IsDefault="true" Grid.Column="0" Grid.Row="2" Content="Confirm" Margin="0,10,0,0" Command="{Binding Path=ConfirmCommand}"/>
+            <Button Grid.Column="0" Grid.Row="1" Content="Add transaction" Padding="5 3" Margin="0 5 0 0" Command="{Binding Path=AddValueCommand}"/>
+            <Button IsDefault="true" Grid.Column="0" Grid.Row="2" Content="Save and Close" Padding="5 3" Margin="0 10 0 0" Command="{Binding Path=ConfirmCommand}"/>
         </Grid>
     </Grid>
 </Window>
