--- a/SWD_GUI_Assignment/Views/MainWindow.xaml
+++ b/SWD_GUI_Assignment/Views/MainWindow.xaml
@@ -3,13 +3,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:local="clr-namespace:SWD_GUI_Assignment"
         xmlns:vm="clr-namespace:SWD_GUI_Assignment.ViewModels"
         mc:Ignorable="d"
-        Title="{Binding Path=WindowTitle}" Height="290" Width="600">
+        Title="{Binding Path=WindowTitle}" Height="290" Width="600" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <vm:MainViewModel></vm:MainViewModel>
     </Window.DataContext>
+    <Window.Resources>
+        <Style TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        </Style>
+
+        <DataTemplate x:Key="BalanceCellTemplate">
+            <TextBlock HorizontalAlignment="Right" Text="{Binding Path=Balance, StringFormat=F2}"/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -19,18 +29,34 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <DataGrid CanUserAddRows="False" IsSynchronizedWithCurrentItem="True" MinHeight="200" CanUserDeleteRows="False" IsReadOnly="True" x:Name="dgDebtors" ItemsSource="{Binding Path=Debtors}" SelectedItem="{Binding Path=CurrentDebtor}" AutoGenerateColumns="True" Margin="5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding EditDebtorCommand}" CommandParameter="{Binding Path=Debtors/}">
 
-                </MouseBinding>
-            </DataGrid.InputBindings>
-        </DataGrid>
+        <ListView IsSynchronizedWithCurrentItem="True" MinHeight="200" x:Name="ListViewDebtors" ItemsSource="{Binding Path=Debtors}" SelectedItem="{Binding Path=Debtor}" Margin="5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Name}">
+                            <GridViewColumnHeader Content="Name" HorizontalContentAlignment="Left" MinWidth="200"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn CellTemplate="{StaticResource BalanceCellTemplate}">
+                            <GridViewColumnHeader Content="Balance" HorizontalContentAlignment="Right" MinWidth="100"></GridViewColumnHeader>
+                        </GridViewColumn>
+                    </GridView.Columns>
+                    
+                </GridView>
+            </ListView.View>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding EditDebtorCommand}" CommandParameter="{Binding ElementName=ListViewDebtors, Path=SelectedItem}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+
+        </ListView>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="5">
             <Button Name="btnAddDebtor" Content="Add Debtor" Command="{Binding Path=AddDebtorCommand}" Margin="0 0 0 5" Padding="5 3"></Button>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1" Margin="5" HorizontalAlignment="Right">
-            <TextBlock Text="Sum: " Margin="0 3 0 0"></TextBlock><TextBlock Text="{Binding Debtors.Balance}" Margin="0 3 5 0"></TextBlock>
+            <TextBlock Text="Sum: " Margin="0 3 0 0"></TextBlock><TextBlock Text="{Binding Debtors.Balance, StringFormat=F2}" Margin="0 3 5 0"></TextBlock>
         </StackPanel>
     </Grid>
 </Window>
