--- a/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
@@ -25,8 +25,8 @@
         <Label Name="LabelAmount" Content="Amount" Grid.Row="2" Grid.Column="0"></Label>
         <TextBox Name="TextBoxAmount" Text="{Binding Path=Amount, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
         <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="0" Margin="0 10 0 0">
-            <Button IsDefault="True" Content="OK" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=SaveCommand}" Margin="0 0 30 0"/>
-            <Button IsCancel="True" Content="Cancel" HorizontalAlignment="Left" MinWidth="75"/>
+            <Button Content="OK" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=SaveCommand}" Margin="0 0 30 0"/>
+            <Button Content="Cancel" HorizontalAlignment="Left" Command="{Binding Path=CloseCommand}"  MinWidth="75"/>
         </StackPanel>
     </Grid>
 </Window>
