--- a/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SWD_GUI_Assignment"
         xmlns:se="clr-namespace:SWD_GUI_Assignment.Services"
         mc:Ignorable="d"
-        Title="{Binding Path=WindowTitle}" Height="180" Width="300"
+        Title="{Binding Path=WindowTitle}" Height="280" Width="300"
         se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False" FocusManager.FocusedElement="{Binding ElementName=TextBoxName}" WindowStartupLocation="CenterOwner">
     <Grid Margin="5">
        <Grid.RowDefinitions>
@@ -15,16 +15,20 @@
            <RowDefinition Height="Auto"></RowDefinition>
            <RowDefinition Height="Auto"></RowDefinition>
            <RowDefinition Height="Auto"></RowDefinition>
-           <RowDefinition Height="*"></RowDefinition>
+           <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Name="LabelName" Content="Name" Grid.Row="0" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxName" Text="{Binding Path=Debtor.Name}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelAmount" Content="Amount" Grid.Row="2" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxAmount" Text="{Binding Path=Amount, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
-        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="0" Margin="0 10 0 0">
+        <TextBox Name="TextBoxName" Text="{Binding Path=VarroeMide.Name}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelVarroMides" Content="VarroMides" Grid.Row="2" Grid.Column="0"></Label>
+        <TextBox Name="TextBoxVarroMides" Text="{Binding Path=VarroeMide.VarroMides, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelComment" Content="Comment" Grid.Row="4" Grid.Column="0"></Label>
+        <TextBox Name="TextBoxComment" Text="{Binding Path=VarroeMide.Comment, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
+        <StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="0" Margin="0 10 0 0">
             <Button Content="OK" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=SaveCommand}" Margin="0 0 30 0"/>
             <Button Content="Cancel" HorizontalAlignment="Left" Command="{Binding Path=CloseCommand}"  MinWidth="75"/>
         </StackPanel>
