Simple but function version. Just short of two hours work.

--- a/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddDebtorWindow.xaml
@@ -8,6 +8,18 @@
         mc:Ignorable="d"
         Title="{Binding Path=WindowTitle}" Height="280" Width="300"
         se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False" FocusManager.FocusedElement="{Binding ElementName=TextBoxName}" WindowStartupLocation="CenterOwner">
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBox}">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="ToolTip"
+                            Value="{Binding RelativeSource={RelativeSource Self},
+                            Path=(Validation.Errors)[0].ErrorContent}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+    
     <Grid Margin="5">
        <Grid.RowDefinitions>
            <RowDefinition Height="Auto"></RowDefinition>
@@ -23,7 +35,15 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Name="LabelName" Content="Name" Grid.Row="0" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxName" Text="{Binding Path=VarroeMide.Name}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3"></TextBox>
+        <TextBox Name="TextBoxName"  VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3">
+            <TextBox.Text>
+                <Binding Path="VarroeMide.Name">
+                    <Binding.ValidationRules>
+                        <ExceptionValidationRule />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <Label Name="LabelVarroMides" Content="VarroMides" Grid.Row="2" Grid.Column="0"></Label>
         <TextBox Name="TextBoxVarroMides" Text="{Binding Path=VarroeMide.VarroMides, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
         <Label Name="LabelComment" Content="Comment" Grid.Row="4" Grid.Column="0"></Label>
