--- a/SWD_GUI_Assignment/Views/MainWindow.xaml
+++ b/SWD_GUI_Assignment/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:SWD_GUI_Assignment"
         xmlns:vm="clr-namespace:SWD_GUI_Assignment.ViewModels"
         mc:Ignorable="d"
-        Title="{Binding Path=WindowTitle}" Icon="/Images/Capture.PNG" Height="290" Width="600" WindowStartupLocation="CenterScreen">
+        Title="{Binding Path=WindowTitle}" Icon="/Images/Capture.PNG"  Height="290" Width="600" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <vm:MainViewModel></vm:MainViewModel>
     </Window.DataContext>
@@ -31,7 +31,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <ListView IsSynchronizedWithCurrentItem="True" MinHeight="200" x:Name="ListViewDebtors" ItemsSource="{Binding Path=VarroeMides}"
+        <ListView IsSynchronizedWithCurrentItem="True" MinHeight="200" x:Name="ListViewDebtors" ItemsSource="{Binding Path=SourceCollection}"
                   SelectedItem="{Binding Path=VarroeMide}" Margin="5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
             <ListView.View>
                 <GridView>
@@ -62,10 +62,11 @@
         </ListView>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="5" Grid.ColumnSpan="2">
             <Button Name="btnAddDebtor" Content="Add VarroeMide" Command="{Binding Path=AddDebtorCommand}" Margin="0 0 0 5" Padding="5 3"></Button>
+            <Button Name="SaveButton" Content="Save to file" Command="{Binding Path=SaveFile}" Margin="5 0 0 5" Padding="5 3"></Button>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="2" Margin="0,5,5,5" HorizontalAlignment="Right">
-            <TextBlock Text="Sum: " Margin="0 3 0 0"></TextBlock>
-            <TextBlock Text="{Binding VarroeMides.Balance, StringFormat=F2}" Margin="0 3 5 0"></TextBlock>
+            <TextBlock Text="FilterBy: " Margin="0 3 0 0"></TextBlock>
+            <TextBox Text="{Binding Path=FilterText, UpdateSourceTrigger=PropertyChanged}" MinWidth="100" Margin="0 3 5 0"></TextBox>
         </StackPanel>
     </Grid>
 </Window>
