Lots of changes, halfwaty there

--- a/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
+++ b/SWD_GUI_Assignment/Views/EditDebtorWindow.xaml
@@ -21,7 +21,7 @@
             <DataGrid CanUserAddRows="False" IsSynchronizedWithCurrentItem="True" MinHeight="200" MinWidth="400" 
                       CanUserDeleteRows="False" IsReadOnly="True" x:Name="Debtor" ItemsSource="{Binding Path=ActiveDebtor.Transactions}" 
                       SelectedItem="{Binding Path=CurrentDebtor}" AutoGenerateColumns="True" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
-            <Button IsCancel="true" Grid.Row="1" Content="Cancel" Padding="5 3" Margin="0 5 0 0"/>
+            <Button IsCancel="true" Grid.Row="1" Content="Cancel" Padding="5 3" Margin="0,7.667,0.333,-3"/>
         </Grid>
         <Grid Grid.Column="1" Margin="10">
             <Grid.RowDefinitions>
