--- a/SWD_GUI_Assignment/Views/MainWindow.xaml
+++ b/SWD_GUI_Assignment/Views/MainWindow.xaml
@@ -28,25 +28,35 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <ListView IsSynchronizedWithCurrentItem="True" MinHeight="200" x:Name="ListViewDebtors" ItemsSource="{Binding Path=SourceCollection}"
-                  SelectedItem="{Binding Path=VarroeMide}" Margin="5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+                  SelectedItem="{Binding Path=Models}" Margin="5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
-                        <GridViewColumn DisplayMemberBinding="{Binding Path=Name}">
-                            <GridViewColumnHeader Content="Name" HorizontalContentAlignment="Left" MinWidth="200"></GridViewColumnHeader>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Navn}">
+                            <GridViewColumnHeader Content="Navn" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
                         </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding Path=VarroMides}">
-                            <GridViewColumnHeader Content="VarroMides" HorizontalContentAlignment="Right" MinWidth="100"></GridViewColumnHeader>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Adresse}">
+                            <GridViewColumnHeader Content="Adresse" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
                         </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding Path=CreatedAt}">
-                            <GridViewColumnHeader Content="CreatedAt" HorizontalContentAlignment="Right" MinWidth="100"></GridViewColumnHeader>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Højde}">
+                            <GridViewColumnHeader Content="Højde" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
                         </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding Path=Comment}">
-                            <GridViewColumnHeader Content="Comment" HorizontalContentAlignment="Right" MinWidth="100"></GridViewColumnHeader>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Hårfarve}">
+                            <GridViewColumnHeader Content="Hårfarve" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Vægt}">
+                            <GridViewColumnHeader Content="Vægt" HorizontalContentAlignment="Right" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=TelefonNr}">
+                            <GridViewColumnHeader Content="TelefonNr" HorizontalContentAlignment="Right" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Kommentarer}">
+                            <GridViewColumnHeader Content="Kommentarer" HorizontalContentAlignment="Right" MinWidth="50"></GridViewColumnHeader>
                         </GridViewColumn>
                     </GridView.Columns>
 
@@ -60,11 +70,53 @@
             </i:Interaction.Triggers>
 
         </ListView>
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="5" Grid.ColumnSpan="2">
-            <Button Name="btnAddDebtor" Content="Add VarroeMide" Command="{Binding Path=AddDebtorCommand}" Margin="0 0 0 5" Padding="5 3"></Button>
+
+        <ListView IsSynchronizedWithCurrentItem="True" MinHeight="200" x:Name="ListViewJobs" ItemsSource="{Binding Path=Jobs}"
+                  SelectedItem="{Binding Path=Jobs}" Margin="5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Navn}">
+                            <GridViewColumnHeader Content="Navn" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Adresse}">
+                            <GridViewColumnHeader Content="Adresse" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Højde}">
+                            <GridViewColumnHeader Content="Højde" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Hårfarve}">
+                            <GridViewColumnHeader Content="Hårfarve" HorizontalContentAlignment="Left" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Vægt}">
+                            <GridViewColumnHeader Content="Vægt" HorizontalContentAlignment="Right" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=TelefonNr}">
+                            <GridViewColumnHeader Content="TelefonNr" HorizontalContentAlignment="Right" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Kommentarer}">
+                            <GridViewColumnHeader Content="Kommentarer" HorizontalContentAlignment="Right" MinWidth="50"></GridViewColumnHeader>
+                        </GridViewColumn>
+                    </GridView.Columns>
+
+                </GridView>
+            </ListView.View>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding EditDebtorCommand}" CommandParameter="{Binding ElementName=ListViewDebtors, Path=SelectedItem}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+
+        </ListView>
+
+
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Margin="5" Grid.ColumnSpan="2">
+            <Button Name="btnAddDebtor" Content="Add Model" Command="{Binding Path=AddDebtorCommand}" Margin="0 0 0 5" Padding="5 3"></Button>
+            <Button Name="btnAddJob" Content="Add Job" Command="{Binding Path=AddJobCommand}" Margin="0 0 0 5" Padding="5 3"></Button>
             <Button Name="SaveButton" Content="Save to file" Command="{Binding Path=SaveFile}" Margin="5 0 0 5" Padding="5 3"></Button>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="2" Margin="0,5,5,5" HorizontalAlignment="Right">
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" Margin="0,5,5,5" HorizontalAlignment="Right">
             <TextBlock Text="FilterBy: " Margin="0 3 0 0"></TextBlock>
             <TextBox Text="{Binding Path=FilterText, UpdateSourceTrigger=PropertyChanged}" MinWidth="100" Margin="0 3 5 0"></TextBox>
         </StackPanel>
