--- a/SWD_GUI_Assignment/Views/AddJobWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddJobWindow.xaml
@@ -47,21 +47,18 @@
         <Label Name="LabelKunde" Content="Kunde" Grid.Row="0" Grid.Column="0"></Label>
         <TextBox Name="TextBoxKunde"  VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3">
             <TextBox.Text>
-                <Binding Path="Model.Kunde">
-                    <Binding.ValidationRules>
-                        <ExceptionValidationRule />
-                    </Binding.ValidationRules>
+                <Binding Path="Job.Kunde">
                 </Binding>
             </TextBox.Text>
         </TextBox>
         <Label Name="LabelStartDato" Content="StartDato" Grid.Row="2" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxStartDato" Text="{Binding Path=Model.StartDato, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
+        <TextBox Name="TextBoxStartDato" Text="{Binding Path=Job.StartDato, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
         <Label Name="LabelAntalDage" Content="AntalDage" Grid.Row="4" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxAntalDage" Text="{Binding Path=Model.AntalDage, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
+        <TextBox Name="TextBoxAntalDage" Text="{Binding Path=Job.AntalDage, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
         <Label Name="LabelAdresse" Content="Adresse" Grid.Row="6" Grid.Column="0"></Label>
-        <TextBox Name="TextAdresse" Text="{Binding Path=Model.Adresse, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="7" Grid.Column="0" Padding="3"></TextBox>
+        <TextBox Name="TextAdresse" Text="{Binding Path=Job.Adresse, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="7" Grid.Column="0" Padding="3"></TextBox>
         <Label Name="LabelAntalModeller" Content="AntalModeller" Grid.Row="8" Grid.Column="0"></Label>
-        <TextBox Name="TextAntalModeller" Text="{Binding Path=Model.AntalModeller, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="9" Grid.Column="0" Padding="3"></TextBox>
+        <TextBox Name="TextAntalModeller" Text="{Binding Path=Job.AntalModeller, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="9" Grid.Column="0" Padding="3"></TextBox>
         
         <StackPanel Orientation="Horizontal" Grid.Row="14" Grid.Column="0" Margin="0 10 0 0">
             <Button IsDefault="true" Content="Ok" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=ConfirmCommand}" Margin="0 0 30 0"/>
