--- a/SWD_GUI_Assignment/Views/AddJobWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddJobWindow.xaml
@@ -57,7 +57,7 @@
         <TextBox Name="TextBoxAntalDage" Text="{Binding Path=Job.AntalDage, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
         <Label Name="LabelAdresse" Content="Adresse" Grid.Row="6" Grid.Column="0"></Label>
         <TextBox Name="TextAdresse" Text="{Binding Path=Job.Adresse, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="7" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelAntalModeller" Content="AntalModeller" Grid.Row="8" Grid.Column="0"></Label>
+        <Label Name="LabelAntalModeller" Content="AntalLokationler" Grid.Row="8" Grid.Column="0"></Label>
         <TextBox Name="TextAntalModeller" Text="{Binding Path=Job.AntalModeller, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="9" Grid.Column="0" Padding="3"></TextBox>
         
         <StackPanel Orientation="Horizontal" Grid.Row="14" Grid.Column="0" Margin="0 10 0 0">
