--- a/SWD_GUI_Assignment/Views/AddModelWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddModelWindow.xaml
@@ -54,17 +54,17 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <Label Name="LabelTelefonNr" Content="TelefonNr" Grid.Row="2" Grid.Column="0"></Label>
+        <Label Name="LabelTelefonNr" Content="Vej" Grid.Row="2" Grid.Column="0"></Label>
         <TextBox Name="TextBoxTelefonNr" Text="{Binding Path=Model.TelefonNr, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
         <Label Name="LabelKommentar" Content="Kommentar" Grid.Row="4" Grid.Column="0"></Label>
         <TextBox Name="TextBoxKommentar" Text="{Binding Path=Model.Kommentarer, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
         <Label Name="LabelAdresse" Content="Adresse" Grid.Row="6" Grid.Column="0"></Label>
         <TextBox Name="TextAdresse" Text="{Binding Path=Model.Adresse, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="7" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelHøjde" Content="Højde" Grid.Row="8" Grid.Column="0"></Label>
+        <Label Name="LabelHøjde" Content="Vejnummer" Grid.Row="8" Grid.Column="0"></Label>
         <TextBox Name="TextHøjde" Text="{Binding Path=Model.Højde, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="9" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelVægt" Content="Vægt" Grid.Row="10" Grid.Column="0"></Label>
+        <Label Name="LabelVægt" Content="Postnummer" Grid.Row="10" Grid.Column="0"></Label>
         <TextBox Name="TextVægt" Text="{Binding Path=Model.Vægt, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="11" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelHårfarve" Content="Hårfarve" Grid.Row="12" Grid.Column="0"></Label>
+        <Label Name="LabelHårfarve" Content="By" Grid.Row="12" Grid.Column="0"></Label>
         <TextBox Name="TextHårfarve" Text="{Binding Path=Model.Hårfarve, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="13" Grid.Column="0" Padding="3"></TextBox>
         <StackPanel Orientation="Horizontal" Grid.Row="14" Grid.Column="0" Margin="0 10 0 0">
             <Button Content="OK" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=SaveCommand}" Margin="0 0 30 0"/>
